--- a/LocalNugetFeed.Core/LocalNugetFeed.Core.csproj
+++ b/LocalNugetFeed.Core/LocalNugetFeed.Core.csproj
@@ -11,6 +11,9 @@
       <PackageReference Include="Newtonsoft.Json">
         <Version>11.0.2</Version>
       </PackageReference>
+      <PackageReference Include="NuGet.Packaging">
+        <Version>4.8.0</Version>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
