--- a/LocalNugetFeed/LocalNugetFeed.Web.csproj
+++ b/LocalNugetFeed/LocalNugetFeed.Web.csproj
@@ -10,6 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>11.0.2</Version>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
