add Business logic layer with own interfaces and DTO models, in particular, create an individual BLL directory and add there a packagemanager class which will manipulate all requests to the services
replace packageservice dependency to packagemanager for packagecontroller

add Automapper as singletone service using our custom AutoMapperConfiguration to map domain models to DTOs

Web project now should know only about BLL

move NugetPackageResouceModel to web project, it should be used only here

add session provider to encapsulate concrete implementation of session and eliminate high cohesion in dependencies

reduce the debounce time during typing in the search box to speed up the search performance

fix unit & integration tests

--- a/LocalNugetFeed.Web.Tests/LocalNugetFeed.Web.Tests.csproj
+++ b/LocalNugetFeed.Web.Tests/LocalNugetFeed.Web.Tests.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\LocalNuGetFeed.Core.Tests\LocalNuGetFeed.Core.Tests.csproj" />
       <ProjectReference Include="..\LocalNugetFeed.Core\LocalNugetFeed.Core.csproj" />
       <ProjectReference Include="..\LocalNugetFeed\LocalNugetFeed.Web.csproj" />
     </ItemGroup>
