--- a/LocalNugetFeed.Core/LocalNugetFeed.Core.csproj
+++ b/LocalNugetFeed.Core/LocalNugetFeed.Core.csproj
@@ -5,6 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper">
+        <Version>8.0.0</Version>
+      </PackageReference>
       <PackageReference Include="Microsoft.AspNetCore.Http">
         <Version>2.1.1</Version>
       </PackageReference>
