--- a/LocalNugetFeed/LocalNugetFeed.Web.csproj
+++ b/LocalNugetFeed/LocalNugetFeed.Web.csproj
@@ -10,6 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper">
+      <Version>8.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
